make a requeest card

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   color: white;
   width: 100%;
   height: 100%;
+  background: rgb(0,95,154);
+  background: linear-gradient(122deg, rgba(0,95,154,1) 0%, rgba(0,95,154,0.43881302521008403) 100%);
+  color: rgb(235, 235, 235);
 }
 
 .Head {
