--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,15 +1,15 @@
 .MainContent{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    overflow: auto;
 }
-.MainContent > div {
-    margin: 10px 0;
-    padding-left: 5rem;
-    width: 100%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
+.Card {
+    margin-top: 5rem;
+    width: 80vw;
+    max-width: 800px;
+    min-width: 300px;
 }
